--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>1.1.8.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>1.1.8.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -27,6 +29,4 @@
         </dependency>
 
     </dependencies>
-
-
 </project>
